# doh-server

./: .gitignore  Cargo.toml  README.md  domains_block.example
.github/workflows/: docker_build_push.yml
docker/: .env.example  Dockerfile  docker-compose.yml  doh-proxy.sh  entrypoint.sh
src/: config.rs  constants.rs  main.rs  utils.rs
src/libdoh/: Cargo.toml
src/libdoh/src/: algorithm.rs  auth.rs  constants.rs  errors.rs  globals.rs  http_proxy.rs  lib.rs  odoh_proxy.rs  plugin.rs  plugin_block_domains.rs  plugin_override_domains.rs  tls.rs  utils.rs
