[package]
name = "doh-proxy"
authors = [
  "Frank Denis <github@pureftpd.org>",
  "Jun Kurihara (Auth/Mult-Relay)",
]
version = "0.9.8"
description = "A DNS-over-HTTPS (DoH) and ODoH (Oblivious DoH) proxy"
keywords = ["dns", "https", "doh", "odoh", "proxy"]
license = "MIT"
homepage = "https://github.com/junkurihara/doh-server"
repository = "https://github.com/junkurihara/doh-server"
categories = ["asynchronous", "network-programming", "command-line-utilities"]
edition = "2021"
readme = "README.md"
publish = false

[features]
default = ["tls", "odoh-proxy"]
tls = ["libdoh/tls"]
odoh-proxy = ["libdoh/odoh-proxy"]

[dependencies]
libdoh = { path = "src/libdoh", version = "0.9.8", default-features = false }
clap = { version = "4", features = ["std", "cargo", "wrap_help", "string"] }
dnsstamps = "0.1.9"
mimalloc = { version = "0.1.34", default-features = false }
jsonwebtoken = "8.2.0"
env_logger = "0.10.0"
url = "2.3.1"

[package.metadata.deb]
extended-description = """\
A fast and secure DoH (DNS-over-HTTPS) and ODoH server written in Rust."""
assets = [
  [
    "target/release/doh-proxy",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/doh-proxy/README.md",
    "644",
  ],
]
section = "network"
depends = "$auto"
priority = "optional"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
