[package]
name = "libdoh"
version = "0.9.2"
authors = ["Frank Denis <github@pureftpd.org>", "Jun Kurihara (for JWT Auth)"]
description = "DoH and Oblivious DoH library for the rust-doh app"
keywords = ["dns", "https", "doh", "odoh", "proxy"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-doh"
repository = "https://github.com/jedisct1/rust-doh"
categories = ["asynchronous", "network-programming", "command-line-utilities"]
edition = "2018"

[features]
default = ["tls"]
tls = ["tokio-rustls"]
odoh-proxy = ["reqwest", "urlencoding"]

[dependencies]
anyhow = "1.0.48"
arc-swap = "1.5.0"
base64 = "0.13.0"
byteorder = "1.4.3"
bytes = "1.1.0"
futures = "0.3.18"
hpke = "0.8.0"
hyper = { version="0.14.15", default-features=false, features=["server", "http1", "http2", "stream"] }
odoh-rs = "1.0.0-alpha.1"
rand = "0.8.4"
reqwest = { version = "0.11.6", features = ["trust-dns"], optional = true}
tokio = { version = "1.14.0", features = ["net", "rt-multi-thread", "parking_lot", "time", "sync"] }
tokio-rustls = { version = "0.23.1", features = ["early-data"], optional = true }
serde_json = "1.0.72"
log = "0.4.14"
jwt-simple = "0.10.7"
p256 = { version="0.9.0", features=["pem", "pkcs8"] }
trust-dns-proto = "0.20.3"
regex = "1.5.4"
urlencoding = { version = "2.1.0", optional = true }
cedarwood = "0.4.5"
rustls-pemfile = "0.2.1"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
