[package]
name = "libdoh"
version = "0.9.3"
authors = ["Frank Denis <github@pureftpd.org>", "Jun Kurihara (for JWT Auth)"]
description = "DoH and Oblivious DoH library for the rust-doh app"
keywords = ["dns", "https", "doh", "odoh", "proxy"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-doh"
repository = "https://github.com/jedisct1/rust-doh"
categories = ["asynchronous", "network-programming", "command-line-utilities"]
edition = "2018"

[features]
default = ["tls", "odoh-proxy"]
tls = ["tokio-rustls"]
odoh-proxy = ["reqwest", "urlencoding"]

[dependencies]
anyhow = "1.0.57"
arc-swap = "1.5.0"
base64 = "0.13.0"
byteorder = "1.4.3"
bytes = "1.1.0"
futures = "0.3.21"
# hpke = "0.7.1"
hpke = { git = "https://github.com/junkurihara/rust-hpke.git" }
hyper = { version = "0.14.18", default-features = false, features = ["server", "http1", "http2", "stream"] }
odoh-rs = {git = "https://github.com/junkurihara/odoh-rs.git" }
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["trust-dns"], optional = true }
tokio = { version = "1.17.0", features = ["net", "rt-multi-thread", "parking_lot", "time", "sync"] }
tokio-rustls = { version = "0.23.3", features = ["early-data"], optional = true }
serde_json = "1.0.79"
log = "0.4.16"
jwt-simple = "0.11.0"
p256 = { version = "0.10.1", features = ["pem", "pkcs8"] }
trust-dns-proto = "0.21.2"
regex = "1.5.5"
urlencoding = { version = "2.1.0", optional = true }
cedarwood = "0.4.5"
rustls-pemfile = "1.0.0"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
