[package]
name = "libdoh"
version = "0.9.4"
authors = ["Frank Denis <github@pureftpd.org>", "Jun Kurihara (for JWT Auth)"]
description = "DoH and Oblivious DoH library for the rust-doh app"
keywords = ["dns", "https", "doh", "odoh", "proxy"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-doh"
repository = "https://github.com/jedisct1/rust-doh"
categories = ["asynchronous", "network-programming", "command-line-utilities"]
edition = "2021"

[features]
default = ["tls", "odoh-proxy"]
tls = ["tokio-rustls"]
odoh-proxy = ["reqwest", "urlencoding"]

[dependencies]
anyhow = "1.0.64"
arc-swap = "1.5.1"
base64 = "0.13.0"
byteorder = "1.4.3"
bytes = "1.2.1"
futures = "0.3.24"
hpke = { git = "https://github.com/junkurihara/rust-hpke.git" }
hyper = { version = "0.14.20", default-features = false, features = [
  "server",
  "http1",
  "http2",
  "stream",
] }
odoh-rs = { git = "https://github.com/junkurihara/odoh-rs.git" }
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["trust-dns"], optional = true }
tokio = { version = "1.21.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
] }
tokio-rustls = { version = "0.23.4", features = [
  "early-data",
], optional = true }
serde_json = "1.0.85"
log = "0.4.17"
jwt-simple = { git = "https://github.com/junkurihara/rust-jwt-simple" }
p256 = { version = "0.11.1", features = ["pem", "pkcs8"] }
trust-dns-proto = "0.22.0"
regex = "1.6.0"
urlencoding = { version = "2.1.2", optional = true }
cedarwood = "0.4.5"
rustls-pemfile = "1.0.1"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
